packages/typ/tests/fixtures/diagnostics/0956_gadt_equality_cast_mismatch_10.ml.infer.expected
File "0956_gadt_equality_cast_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0956_gadt_equality_cast_mismatch_10 is not a valid module name.

File "0956_gadt_equality_cast_mismatch_10.ml", line 7, characters 20-24:
7 |     | Refl_kappa -> true
                        ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
